zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__ng_second_param_type_is_normal_form_recursive_match_expr.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
            (
                match
                3
                1
                Set0
                (
                    (
                        0
                        1
                    )
                    (
                        0
                        1
                    )
                )
            )
        )
        ()
    )@(ByteIndex(103)..ByteIndex(363)),
    param_type_index: 1,
    normalized_param_type: (
        match
        3
        1
        Set0
        (
            (
                0
                1
            )
            (
                0
                1
            )
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            2,
        ),
        NodeEdge(
            0,
        ),
    ],
}
