zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__nonstrictly_positive_in_second_param_type_is_illegal.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
            (
                for
                (
                    (
                        for
                        (
                            1
                        )
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        ()
    )@(ByteIndex(42)..ByteIndex(143)),
    param_type_index: 1,
    normalized_param_type: (
        for
        (
            (
                for
                (
                    1
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        (
            ind
            Set0
            "False"
            ()
            ()
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
