zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__positivity_condition_nonsatisfying_ind_as_first_param_type_is_ng.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                for
                (
                    1
                )
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
        ()
    )@(ByteIndex(115)..ByteIndex(335)),
    param_type_index: 0,
    normalized_param_type: (
        for
        (
            1
        )
        (
            ind
            Set0
            "False"
            ()
            ()
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
