zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__rec_ind_in_index_arg_inline.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::RecursiveIndParamAppearsInVconDefIndexArg {
    def: (
        ()
        (
            1
        )
    )@(ByteIndex(222)..ByteIndex(229)),
    index_arg_index: 0,
    normalized_index_arg: 1,
    path_from_index_arg_to_problematic_deb: [],
}
