zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__rec_ind_in_index_arg_is_illegal.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::RecursiveIndParamAppearsInVconDefIndexArg {
    def: (
        ()
        (
            (
                2
                (
                    0
                    (
                        ind
                        Set0
                        "False"
                        ()
                        ()
                    )
                )
            )
        )
    )@(ByteIndex(75)..ByteIndex(237)),
    index_arg_index: 0,
    normalized_index_arg: (
        2
        (
            0
            (
                ind
                Set0
                "False"
                ()
                ()
            )
        )
    ),
    path_from_index_arg_to_problematic_deb: [
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
