zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__recursive_ind_app_with_nonrecursive_arg_as_param_types_are_legal.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: PrettyPrint(type_.raw())
---
(
    for
    (
        Set0
    )
    Set1
)
