zoc/src/typecheck/tests/snapshots/zoc__typecheck__tests__positivity__recursive_ind_app_with_recursive_ind_in_arg_as_first_param_type_is_illegal.snap
---
source: zoc/src/typecheck/tests/positivity.rs
expression: pretty_printed_err
---
TypeError::VconDefParamTypeFailsStrictPositivityCondition {
    def: (
        (
            (
                0
                (
                    2
                    (
                        0
                        (
                            ind
                            Set0
                            "False"
                            ()
                            ()
                        )
                    )
                )
            )
        )
        (
            (
                ind
                Set0
                "False"
                ()
                ()
            )
        )
    )@(ByteIndex(75)..ByteIndex(354)),
    param_type_index: 0,
    normalized_param_type: (
        0
        (
            2
            (
                0
                (
                    ind
                    Set0
                    "False"
                    ()
                    ()
                )
            )
        )
    ),
    path_from_param_type_to_problematic_deb: [
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            1,
        ),
        NodeEdge(
            0,
        ),
        NodeEdge(
            0,
        ),
    ],
}
